--- a/index.html
+++ b/index.html
@@ -333,12 +333,13 @@
                 </a>
                 <nav id="footer-nav">
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/platform/">Platform</a></li>
-                        <li><a href="/about/">About</a></li>
-                        <li><a href="/customer-stories/">Customer Stories</a></li>
-                        <li><a href="/blog/">Blog</a></li>
-                        <li><a href="/book-a-demo/" class="cta">Book a Demo</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="inner-page.html">Platform</a></li>
+                        <li><a href="/">About</a></li>
+                        <li><a href="/">Resources</a></li>
+                        <li><a href="/">Customer Stories</a></li>
+                        <li><a href="/">Blog</a></li>
+                        <li><a href="/" class="cta grad-cta">Get a Demo</a></li>
                     </ul>
                 </nav>
     
